--- a/index.html
+++ b/index.html
@@ -240,12 +240,13 @@
                         </ul>
                     </div>
                 </div>
-                <div class="map-container">
+                <div class="map-container p-6 m-2">
                     <div id="map" class="map"></div>
                     <div class="map-placeholder">
                         <i class="fas fa-map-marked-alt"></i>
                         <p>Mapa interactivo</p>
-                        <small>Haz clic para ver en Google Maps</small>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d877.0413804873891!2d-67.11953545026891!3d-28.44442635012478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942743949960c927%3A0x999e13e2da2453f7!2sPANIFICADORA%20SANTA%20ROSA!5e0!3m2!1ses-419!2sar!4v1753736933446!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        
                     </div>
                 </div>
             </div>
